# cpu4-emulator

./: .gitignore  CMakeLists.txt  README.md
examples/asm/: basic-01.asm4  basic-02.asm4  comment-01.asm4
examples/mem/: simple01.mem  simple01_ws.mem
src/: CPU4.cpp  CPU4.hpp  OpCode.hpp  cpu4.cpp  main.cpp  op-codes.hpp
src/asm/: IO.cpp  IO.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  main.cpp
